SP: Fix submit button not appearing

--- a/score_predict/templates/score_predict/fixtures.html
+++ b/score_predict/templates/score_predict/fixtures.html
@@ -87,7 +87,11 @@
     </div>
   {% endwith %}
 {% endif %}
-
+<div>
+  <p>
+<button id="submit-scores" class="btn btn-primary">Submit</button>
+  </p>
+</div>
 <!-- Fixture accordion -->
 <div id="fixture-container" class="container mx-auto mt-4" data-template-id="{{ game_template.id }}">
   <div class="accordion small-font" id="accordionExample">
