--- a/bank/templates/bank/money_list.html
+++ b/bank/templates/bank/money_list.html
@@ -36,6 +36,21 @@
                 {% endfor %}
             </tbody>
         </table>
+
+            {% if messages %}
+            <h3 class="mt-4">📜 Recent Transactions</h3>
+            <ul class="list-group">
+                {% for msg in messages %}
+                    <li class="list-group-item">
+                        <small class="text-muted">{{ msg.created_at|date:"Y-m-d H:i" }}</small><br>
+                        {{ msg.message }}
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <p class="mt-3">No recent transactions for this group.</p>
+        {% endif %}
+
     {% else %}
         <p class="mt-3">No balances found for this group.</p>
     {% endif %}
