Player messaging additions for LMS picks

--- a/bank/templates/bank/money_list.html
+++ b/bank/templates/bank/money_list.html
@@ -49,7 +49,7 @@
                             <th scope="col"></th>
                             <th scope="col"></th>
                             <th scope="col"></th>
-                            <th scope="col"></th>
+                            <!-- <th scope="col"></th> -->
                         </tr>
                     </thead>
                     <tbody>
@@ -58,7 +58,7 @@
                             <th scope="row">{{update.group}}</th>
                             <td><small class="text-muted">{{ update.created_at|date:"Y-m-d H:i" }}</td>
                             <td>{{ update.message}} </td>
-                            <td>{{update.link}}</td>
+                            <!-- <td>{{update.link}}</td> -->
                         </tr>
                         {% endfor %}
                     </tbody>
